Use engaging hues within the touch screen bit
It seems to add and remove sometimes- this will need investigation.

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,6 @@ body {
 	inset: 0 0 0 0;
 	width: 100vw;
 	height: 100vh;
-	background-color: red;
+	background-color: grey;
 	touch-action: none;
 }
