--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,41 @@
 :root {
 	color-scheme: light dark;
-}
-
-body {
-	margin: 0;
-	min-height: 100vh;
-	position: relative;
 	background-color: blue;
 }
 
 #main {
-	position: absolute;
+	z-index: -1;
 	inset: 0 0 0 0;
+	position: absolute;
 	width: 100vw;
 	height: 100vh;
 	background-color: grey;
 	touch-action: none;
+}
+
+#device-unsupported,
+#touch-unsupported,
+#webgpu-unsupported {
+	display: none;
+}
+
+#device-unsupported {
+	font-size: 2em;
+	color: light-dark(black, white);
+	background-color: light-dark(white, black);
+	padding: 1em;
+	margin: 1em;
+	border-radius: 1em;
+}
+
+#device-unsupported:has(#webgpu-unsupported.applicable),
+#webgpu-unsupported.applicable {
+	display: revert;
+}
+
+@media not (any-pointer: coarse) {
+	#device-unsupported,
+	#touch-unsupported {
+		display: revert;
+	}
 }
